--- a/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
+++ b/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
@@ -16,5 +16,177 @@
 //                              var(--filter-shadow-color)
 //                              var(--borders-color)
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+.signinorup {
+    width: 100%;
+    height: auto; // 100vh
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 520px;
+    flex-direction: column;
+    transition: var(--quick-fx);
+    margin-top: 40px;
+    position: relative;
+    &__topside {
+        width: 1000px;
+        height: 100px;
+        border: none;
+        border-bottom: 2px solid var(--borders-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 160px;
+        padding-right: 100px;
+        &_language {
+            width: 120px;
+            outline: none;
+            border: none;
+            border-bottom: 1px solid var(--borders-color);
+            background-color: transparent;
+            color: var(--text-color);
+            font-size: 14px;
+            font-weight: 600;
+            &__options {
+                background-color: var(--default-bg-color);
+            }
+        }
+        &_selection {
+            display: flex;
+            gap: 40px;
+            &__login {
+                font-size: 40px;
+                font-weight: 900;
+                color: rgb(0,128,255);
+                cursor: pointer;
+                scale: 1.2;
+                opacity: 1.0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                &:hover {
+                    filter: brightness(1.2);
+                }
+            }
+            &__register {
+                font-size: 40px;
+                font-weight: 900;
+                color: rgb(64,64,64);
+                cursor: pointer;
+                scale: 0.8;
+                opacity: 0.75;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                &:hover {
+                    filter: brightness(2.5);
+                }
+            }
+        }
+        &_lord {
+            width: 50px;
+            height: 50px;
+            border: 1px solid var(--borders-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--link-color);
+            font-size: 24px;
+            border-radius: 50%;
+            background-color: var(--default-bg-color);
+            transition: var(--quick-fx);
+            // animation: spinning-button 0.75s ease-in-out 0ms 1; // spinning-button 1.0s ease-in-out 500ms infinite
+            &:hover {
+                filter: drop-shadow(0 0 5px var(--filter-shadow-color));
+            }
+        }
+    }
 
+    &__login {
+        width: 400px;
+        height: 500px;
+        border: 1px solid var(--borders-color);
+        border-radius: 5px;
+        background-color: var(--default-bg-color);
+        position: absolute;
+        top: 53%;   //   53%   40%
+        left: 50%;   //   50%   -4%
+        transform: translate(-50%, -50%);
+        transition: var(--quick-fx);
+        overflow: hidden;
+        scale: 1.0;   //   1.0   0.6
+        opacity: 1.0;   //   1.0   0.5
+    }
+    &__register {
+        position: absolute;
+        width: 600px;
+        height: 500px;
+        border: 1px solid var(--borders-color);
+        border-radius: 5px;
+        background-color: var(--default-bg-color);
+        position: absolute;
+        top: 40%;   //   40%   53%
+        left: 80%;   //   80%   50%
+        transform: translate(-50%, -50%);
+        transition: var(--quick-fx);
+        overflow: hidden;
+        scale: 0.6;   //   0.6   1.0
+        opacity: 0.5;   //   0.5   1.0
+    }
+
+    &__bottomside {
+        width: 1000px;
+        height: 60px;
+        border: none;
+        border-top: 2px solid var(--borders-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        &_buttons {
+            width: auto;
+            height: auto;
+            padding: 5px;
+            border-radius: 4px;
+            border: 1px solid var(--borders-color);
+            background-color: var(--buttons-color);
+            gap: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: var(--quick-fx);
+            &:hover {
+                scale: 1.05;
+                filter: drop-shadow(0 0 10px var(--buttons-hover-color));
+                background-color: var(--buttons-hover-color);
+            }
+            &:active {
+                transition: var(--instant-color);
+                filter: drop-shadow(0 0 10px var(--buttons-active-color));
+                background-color: var(--buttons-active-color);
+            }
+            .fa-solid {
+                color: var(--text-color);
+            }
+            p {
+                font-weight: 600;
+                color: var(--text-color);
+            }
+        }
+    }
+}
+
+@keyframes spinning-button {
+    0% {
+        transform: rotateY(0deg);
+        scale: 1.0;
+    }
+    50% {
+        transform: rotateY(180deg);
+        scale: 1.5;
+    }
+    100% {
+        transform: rotateY(360deg);
+        scale: 1.0;
+    }
+}
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
