--- a/04 ■► React/final-app/src/pages/Products/index.module.css
+++ b/04 ■► React/final-app/src/pages/Products/index.module.css
@@ -257,6 +257,7 @@
   overflow: hidden;
   cursor: pointer;
   transition: var(--quick-fx);
+  position: relative;
 }
 .products .container .products__cards:hover {
   filter: drop-shadow(0 0 6px var(--filter-shadow-color));
@@ -282,6 +283,7 @@
      object-fit: cover;
 }
 .products .container .products__cards_image__favbtn {
+  z-index: 2;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -296,6 +298,7 @@
   align-items: center;
   justify-content: center;
   font-size: 14px;
+  cursor: pointer;
   transition: var(--quick-fx);
 }
 .products .container .products__cards_image__favbtn:hover {
