--- a/04 ■► React/final-app/src/pages/Products/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Products/index.module.scss
@@ -272,6 +272,7 @@
             overflow: hidden;
             cursor: pointer;
             transition: var(--quick-fx);
+            position: relative;
             &:hover {
                 filter: drop-shadow(0 0 6px var(--filter-shadow-color));
                 scale: 1.03;
@@ -294,6 +295,7 @@
                     object-fit: cover;
                 }
                 &__favbtn {
+                    z-index: 2;
                     position: absolute;
                     top: 10px;
                     right: 10px;
@@ -308,6 +310,7 @@
                     align-items: center;
                     justify-content: center;
                     font-size: 14px;
+                    cursor: pointer;
                     transition: var(--quick-fx);
                     &:hover {
                         background-color: var(--buttons-hover-color);
