--- a/04 ■► React/final-app/src/global.scss
+++ b/04 ■► React/final-app/src/global.scss
@@ -1,6 +1,5 @@
-// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 :root {
-    // custom color picks for LIGHT/DARK mode --- this values is LIGHT mode values for starting
+    // color picks
     --default-color: rgb(155,155,155);
     --text-color: rgb(5,5,5);
     --text-negative-color: rgb(205,205,205);
@@ -18,7 +17,6 @@
     --filter-shadow-color: rgb(10,10,10);
     --borders-color: rgb(45,45,45);
     --body-bg: linear-gradient(to right, rgb(250,150,10), rgb(10,250,150)); // to bottom right
-    // --body-bg: linear-gradient(35deg, rgb(250,150,10), rgb(10,250,150)); // to bottom right
     --searchbar-bg: rgb(250,250,250);
     --searchbar-color: rgb(50,50,50);
 
@@ -26,13 +24,14 @@
     --slow-fx: ease-in-out 0.35s;
     --quick-fx: ease 0.15s;
     --instant-fx: linear 0s;
+
     // responsivity sizes ( use with @media only screen and (max-width: var(--mobile-device) {...}; )
     --extra-small-device: 575px;
     --mobile-device: 767px;
     --tablet-device: 991px;
     --desktop-device: 1199px;
 }
-// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
 body {
     // pin components on center
     display: flex;
@@ -41,9 +40,8 @@ body {
     width: 100%;
     height: 100%;
     border: none;
-    // align-items: center;
 }
-// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
 * {
     // zeroing defaults
     margin: 0px;
@@ -63,16 +61,15 @@ body {
         color: var(--text-color);
     }
 }
-// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
 // button cursor
 button {
     cursor: pointer;
 }
-// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
 // mixins (use with @include ...; )
 @mixin flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
